--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                                 “Empowered teams create truly amazing products. Set the north star and let them follow it.”
                             </p>
                             <div class="mb-5 mx-auto d-flex gap-3">
-                                <img src="./images/twitter.svg" alt="twitter icon" width="24" height="20">
-                                <img src="./images/linkedin.svg" alt="Linkedin icon" width="20" height="20">
+                                <i class="fa-brands fa-twitter text-white fs-5"></i>
+                                <i class="fa-brands fa-linkedin text-white fs-5"></i>
                             </div>
                             <img class="position-absolute top-100 start-50 translate-middle" src="./images/plus.svg" alt="Plus icon" width="56" height="56">
                         </div>
